[metadata]
name = jwstinfo
provides = jwstinfo
package_name = jwstinfo
author = Daniel D'Avella
description = Provides summary of JWST data files
long_description = file: README.rst
url = https://github.com/spacetelescope/jwstinfo
github_project = spacetelescope/jwstinfo

[options]
packages = find:
zip_safe = False
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    asdf>=2.3.2

[options.entry_points]
console_scripts =
    jwstinfo = jwstinfo.jwstinfo:main

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py
